--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
 	<description>Mobbing Journal</description>
 
 	<properties>
-		<java.version>1.8</java.version>
-		<kotlin.version>1.2.71</kotlin.version>
+		<java.version>12</java.version>
+		<kotlin.version>1.3.50</kotlin.version>
 	</properties>
 
 	<dependencies>
@@ -59,6 +59,11 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
