--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>de.huddeldaddel</groupId>
 	<artifactId>mjournal</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>mjournal</name>
 	<description>Mobbing Journal</description>
 
