Tweak configuration for Heroku

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -2,6 +2,8 @@ com.auth0.domain=${AUTH0_DOMAIN}
 com.auth0.clientId=${AUTH0_CLIENT_ID}
 com.auth0.clientSecret=${AUTH0_CLIENT_SECRET}
 
+server.port=${PORT}
+
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
