--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.removeAbandoned=true
 
 spring.flyway.check-location=false
 
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=none
