Replaced callback url with config value

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,6 +1,7 @@
-com.auth0.domain=${AUTH0_DOMAIN}
+com.auth0.callback=https://mobbing-journal.herokuapp.com/callback
 com.auth0.clientId=${AUTH0_CLIENT_ID}
 com.auth0.clientSecret=${AUTH0_CLIENT_SECRET}
+com.auth0.domain=${AUTH0_DOMAIN}
 
 server.port=${PORT}
 
