Renamed base package and added README

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -1,4 +1,4 @@
-com.auth0.callback=https://mobbing-journal.herokuapp.com/callback
+com.auth0.callback=https://projectname.herokuapp.com/callback
 com.auth0.clientId=${AUTH0_CLIENT_ID}
 com.auth0.clientSecret=${AUTH0_CLIENT_SECRET}
 com.auth0.domain=${AUTH0_DOMAIN}
